--- a/simuladorDeMenus/simuladorDeMenus.csproj
+++ b/simuladorDeMenus/simuladorDeMenus.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Config.Designer.cs">
+      <DependentUpon>Config.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +67,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Config.resx">
+      <DependentUpon>Config.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,9 +100,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\sus.mp3" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\sus.wav" />
   </ItemGroup>
   <ItemGroup>
@@ -115,7 +122,19 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\cat-breakdancing.mp4" />
+    <None Include="Resources\giornokujo.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\everynyan.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\toro2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\osaka.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\quieres.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
